2023-09-29  Nick Clifton  <nickc@redhat.com>

	PR 30906
	* elf.c (_bfd_elf_slurp_version_tables): Test that the verref
	section header has been initialised before using it.

2023-09-28  Nick Clifton  <nickc@redhat.com>

	PR 30886
	* elf-bfd.h (struct elf_obj_tdata): Add dt_strsz field.
	* elf.c (_bfd_elf_get_dynamic_symbols): Add a NUL byte at the end
	of the string table.
	Initialise the dt_strsz field.
	(_bfd_elf_slurp_version_tables): Only free the contents if they
	were malloc'ed.
	Add checks before setting string pointers in the dt_strtab buffer.

2023-09-27  Nick Clifton  <nickc@redhat.com>

	PR 30885
	* elfcode.h (elf_slurp_symbol_table): Compute the symcount for non
	dynamic symbols in the same way as _bfd_elf_get_symtab_upper_bound.

2023-09-13  Jacob Navia  <jacob@jacob.remcomp.fr>

	* elf.c (_bfd_elf_init_reloc_shdr): Don't segfault on alloc fail.

2023-09-13  Alan Modra  <amodra@gmail.com>

	* elf-strtab.c (_bfd_elf_strtab_init): In the event of memory
	allocation failure, make sure that the hash table is freed.

2023-08-30  Tom Tromey  <tom@tromey.com>

	PR binutils/30703
	* doc/webassembly.texi, doc/bfd.texi: Revert 8bb23cdb, adding
	parameters back to @node.

2023-08-04  Nick Clifton  <nickc@redhat.com>

	PR 15545
	* cache.c (bfd_cache_close_all): Extend description to note that
	all files will be closed, even those that are not cacheable.
	Add code to prevent a possible infinite loop.

2023-08-02  Tom Tromey  <tromey@adacore.com>

	* pei-x86_64.c (PEI_HEADERS): Do not define.
	* pei-loongarch64.c (PEI_HEADERS): Do not define.
	* pei-aarch64.c (PEI_HEADERS): Do not define.
	* pe-x86_64.c (PEI_HEADERS): Do not define.
	* pe-aarch64.c (PEI_HEADERS): Do not define.
	* libpei.h (_LIBPEI_H): Add include guard.
	* coff-x86_64.c (PEI_HEADERS): Do not check.
	* coff-loongarch64.c (PEI_HEADERS): Do not check.
	* coff-aarch64.c (PEI_HEADERS): Do not check.

2023-07-24  Johannes Schauer Marin Rodrigues  <josch@debian.org>
